fixed spacing issues

--- a/main.css
+++ b/main.css
@@ -30,7 +30,8 @@ h2 {
     display: flex;
     flex-direction: row-reverse;
     justify-content: space-between;
-    margin: 2em;
+    margin: 5em;
+    align-items: center;
 }
 
 #bioPage img {
@@ -39,6 +40,7 @@ h2 {
     border: 3px solid black;
     border-radius: 20em;
     align-self: center;
+    margin: 2em;
 }
 
 #bioPage p::first-letter {
